# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  expected_json.json  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml
gendiff/: __init__.py
gendiff/scripts/: build_diff.py  formatters.py  gendiff.py  parsing_files.py
gendiff/scripts/format/: json.py  plain.py  stylish.py
tests/: test_gendiff.py
